fix: loader isn't visible on light theme

--- a/src/design/main.scss
+++ b/src/design/main.scss
@@ -127,7 +127,6 @@ body {
   height: 28px;
   margin: 2px;
   border-radius: 0px;
-  background: white;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -165,105 +164,3 @@ body {
 .loader-square:nth-of-type(7) {
   animation-delay: -10s;
 }
-
-
-/* Typewriter effect 1 */
-@keyframes typing {
-  0% { content: ""; }
-
-  5% { content: "b"; }
-  10% { content: "bu"; }
-  15% { content: "bus"; }
-  20% { content: "busi"; }
-  25% { content: "busin"; }
-  30% { content: "busine"; }
-  35% { content: "business"; }
-  40% { content: "businesses"; }
-  
-  45% { content: ""; }
-
-  50% { content: "i"; }
-  55% { content: "in"; }
-  60% { content: "ind"; }
-  65% { content: "indi"; }
-  70% { content: "individ"; }
-  75% { content: "individual"; }
-  
-  80% { content: ""; }
-
-  85% { content: "s"; }
-  90% { content: "su"; }
-  95% { content: "succe"; }
-  100% { content: "succeed"; }
-}
-
-
-
-@keyframes blink {
-
-  0%,
-  100% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0;
-  }
-}
-
-.typewriter {
-  --caret: currentcolor;
-}
-
-.typewriter::before {
-  content: "";
-  animation: typing 13.5s infinite;
-}
-
-.typewriter::after {
-  content: "";
-  border-right: 1px solid var(--caret);
-  animation: blink 0.5s linear infinite;
-}
-
-.typewriter.thick::after {
-  border-right: 1ch solid var(--caret);
-}
-
-.typewriter.nocaret::after {
-  border-right: 0;
-}
-
-
-@media (prefers-reduced-motion) {
-  .typewriter::after {
-    animation: none;
-  }
-
-  @keyframes sequencePopup {
-
-    0%,
-    100% {
-      content: "developer";
-    }
-
-    25% {
-      content: "writer";
-    }
-
-    50% {
-      content: "reader";
-    }
-
-    75% {
-      content: "human";
-    }
-  }
-
-  .typewriter::before {
-    content: "developer";
-    animation: sequencePopup 12s linear infinite;
-  }
-}
-
-/**/
